# PyAegis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROGRESS_LOG.md  README.ja.md  README.ja.md.part1  README.ja.md.part2  README.md  README.zh-CN.md  ROADMAP.md  SECURITY.md  _ja_part1.md  _ja_part2.md  _ja_part3.md  _ja_part4.md  _ja_part5.md  _merge.py  _patch_cli.py  _patch_cli2.py  _patch_cli3.py  action.yml  aegis-publisher-loop.ps1  benchmark_report.json  build_taint.py  bytes_check.py  check_finding.py  check_syntax.py  debug_xxe.py  do_commit.bat  dummy_test_file.py  fff.py  final_fix.py  fix_corpus.py  inspect_raw.py  mkdocs.yml  out.txt  pyproject.toml  pytest_out.txt  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md
demo/: vuln_demo.py
docs/: cache.md  ci-integration.md  comparison.md  detectors.md  faq.md  github-action.md  index.md  mcp-integration.md  performance.md  quickstart.md  rules.md  sarif.md
examples/: community-rules-example.yml
pyaegis/: __init__.py  __main__.py  api.py  cli.py  debt.py  exceptions.py  fixers.py  langchain_tool.py  mcp_server.py  models.py  rag.py  reporters.py  rule_plugins.py  rules_catalog.py
pyaegis.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_api.py  test_call_graph.py  test_cli.py  test_cli_incremental_dependents.py  test_conditional_sinks.py  test_core.py  test_cross_module.py  test_debt.py  test_django_cbv_self_request.py  test_django_framework_sources.py  test_django_raw_sink.py  test_edge_cases.py  test_fastapi_depends_sources.py  test_fastapi_explicit_sources.py  test_fixers.py  (+15 more)
(+35 files in other folders)
