[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaegis"
version = "0.3.0"
description = "Advanced Python Static Application Security Testing (SAST) Engine"
readme = "README.md"
authors = [
    { name = "Open Source Community", email = "maintainers@pyaegis.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
debt = [
    "radon>=6.0.0",
    "sqlite-vec>=0.1.6",
]
dev = [
    "openai>=1.0.0",
    "radon>=6.0.0",
    "sqlite-vec>=0.1.6",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "flake8>=6.1.0",
    "pre-commit>=3.4.0",
    "tox>=4.11.0",
    "mypy>=1.5.1",
    "mkdocs-material>=9.4.0",
]

[project.scripts]
pyaegis = "pyaegis.cli:main"

# Explicit package discovery to avoid setuptools failing on extra top-level dirs
# (e.g. the generated "site/" docs folder).
[tool.setuptools]
packages = ["pyaegis", "pyaegis.core", "pyaegis.frameworks", "pyaegis.integrations", "pyaegis.rules"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
